# 3D-Chess-augmentation

./: .gitignore  README.md  TSERequestExample.json  dummyRequester.py  genetic_operators.py  graph_generator.py  http_manager.py  http_manager_instrupy.py  hypervolume_calculator.py  instrupy_manager.py  mosquitto.conf.txt  mqtt_manager.py  mqtt_manager_instrupy.py  plot_generator.py  reconstruct_from_logs.py  workflow_generator.py
Evaluators_Module/SpaDes/: ADCSDesign.py  ConstellationDesignMain.py  CostEstimation.py  CostEstimationJSON.py  ExampleWithVASSAR.py  SpacecraftDesignSelection.py  SpacecraftDesignSelectionConstellation.py  mqtt_manager.py  server.py
Evaluators_Module/TAT-C/: .gitignore  README.md  access_response.py  http_manager.py  mqtt_manager.py  orbitpy_tatc.py  propagation_interface.py  publisher_test.py  randomasq.py  requirements.txt  tat_c_manager.py  tatc_propagation.py  tatc_server.py  (+1 more)
Python/: graph_generator.py  hv_evolution_generator.py  hypervolume_calculator.py  pareto_generator.py  requirements.txt
TAT-C HYBRID CONSTELLATIONS/: LICENSE  README.md
TSE Module/: Makefile  docker-compose.yml
TSERequests/: TSERequestAssigning.json  TSERequestAssigningSmall.json  TSERequestClimateCentricDSPAC_test.json  TSERequestFFFireSat2_test.json  assigning.json  combining.json  modified_tseRequest.json
eose/: access.py  geometry.py  instruments.py  orbits.py  propagation.py  satellites.py  utils.py
orbitpy/: http_manager_orbitpy.py
orbitpy/propcov/: CMakeLists.txt  setup.py
orbitpy/propcov/lib/propcov-cpp/: DiscretizedSensor.cpp  Projector.cpp
(+892 files in other folders)
